[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown_to_html"
version = "0.1.0"
description = "Markdown to HTML converter"
readme = "README.md"
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[tool.pytest]
testpaths = ["markdown_to_html/tests"] 